// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddReactionButton /> snapshot should match snapshot 1`] = `
<div>
  <mdc-button
    class="md-add-reaction-button-wrapper"
    color="default"
    data-btn-type="icon"
    prefix-icon="reactions-regular"
    role="button"
    size="24"
    tabindex="0"
    type="button"
    variant="secondary"
  />
</div>
`;

exports[`<AddReactionButton /> snapshot should match snapshot with className 1`] = `
<div>
  <mdc-button
    class="example-class md-add-reaction-button-wrapper"
    color="default"
    data-btn-type="icon"
    prefix-icon="reactions-regular"
    role="button"
    size="24"
    tabindex="0"
    type="button"
    variant="secondary"
  />
</div>
`;

exports[`<AddReactionButton /> snapshot should match snapshot with id 1`] = `
<div>
  <mdc-button
    class="md-add-reaction-button-wrapper"
    color="default"
    data-btn-type="icon"
    id="example-id"
    prefix-icon="reactions-regular"
    role="button"
    size="24"
    tabindex="0"
    type="button"
    variant="secondary"
  />
</div>
`;

exports[`<AddReactionButton /> snapshot should match snapshot with style 1`] = `
<div>
  <mdc-button
    class="md-add-reaction-button-wrapper"
    color="default"
    data-btn-type="icon"
    prefix-icon="reactions-regular"
    role="button"
    size="24"
    style="color: pink;"
    tabindex="0"
    type="button"
    variant="secondary"
  />
</div>
`;
